# gtasks-md

./: .gitignore  README.md  flake.nix  pyproject.toml  requirements.txt  runner.py  setup.py  shell.nix
.github/workflows/: publish.yaml  verify.yaml
app/: __main__.py  backup.py  cli.py  credentials.py  editor.py  example.py  googleapi.py  pandoc.py  tasks.py  test_pandoc.py
docs/: contributing.md  credentials.md  design.md  example.md  example.py
tests/: test_pandoc.py
